# AI_information_grab

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: __init__.py  container.py  main.py
app/api/: router.py  schemas.py
app/cli/: main.py
app/connectors/: base.py  github.py  hackernews.py  reddit.py
app/core/: db.py  hashing.py  logging.py  settings.py  similarity.py  time.py  urls.py
app/models/: domain.py  orm.py
app/repos/: items.py  runs.py
app/services/: digest.py  health.py  ingestion.py  llm.py  source_registry.py
app/worker/: __init__.py  runner.py
docs/: api.md  architecture.md  data-model.md  sources.md
tests/: test_connectors.py  test_core_utils.py  test_digest_service.py
