[project]
name = "ai-information-grab"
version = "0.1.0"
description = "AI intelligence ingestion, deduplication, summarization, and digest service."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "greenlet>=3.2.4",
    "httpx>=0.28.1",
    "pydantic-settings>=2.10.1",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.43",
    "typer>=0.16.1",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.21.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]

[project.scripts]
aig = "app.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
